--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
