--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "socket.io-client": "^2.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
