--- a/package.json
+++ b/package.json
@@ -2,27 +2,19 @@
   "name": "speakingfordisability",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://omegak911.github.io/MessagingForDisability",
+  "url": "https://github.com/omegak911/MessagingForDisability/tree/socket_server",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "express": "^4.16.3",
-    "fs": "^0.0.1-security",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.2.0"
   }
 }
