--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "speakingfordisability",
   "version": "0.1.0",
   "private": true,
-  "url": "https://github.com/omegak911/MessagingForDisability/tree/socket_server",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/omegak911/MessagingForDisability/tree/socket_server.git"
+  },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
