--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "fs": "^0.0.1-security",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.4",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
