--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "socket.io-client": "^2.1.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "node socket_server/bin/entry.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "node scripts/test.js --env=jsdom"
   }
 }
