--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
